--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
+    "react-tooltip": "^5.13.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
   },
