--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.13.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
